; ModuleID = '/home/carl/AnghaBench/git/extr_bundle.c_read_bundle_header.c'
source_filename = "/home/carl/AnghaBench/git/extr_bundle.c_read_bundle_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bundle_header = type { i32 }

@O_RDONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"could not open '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_bundle_header(i8* %0, %struct.bundle_header* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.bundle_header*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.bundle_header* %1, %struct.bundle_header** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* @O_RDONLY, align 4
  %9 = call i32 @open(i8* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @error(i32 %13, i8* %14)
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.bundle_header*, %struct.bundle_header** %5, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @parse_bundle_header(i32 %17, %struct.bundle_header* %18, i8* %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %12
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @parse_bundle_header(i32, %struct.bundle_header*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
